--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -262,3 +262,187 @@ li{
     }
 }
 
+.history{
+    padding-top: 200px;
+    padding-bottom: 120px;
+    &__card{
+        width: 349px;
+        height: 328px;
+        box-shadow: 10px 10px 40px 1px rgba(0,0,0, 10%);
+        background-color: #fff;
+        padding: 48px 40px 20px 25px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        margin-top: -315px;
+        margin-bottom: 150px;
+        @media (max-width: 1000px) {
+            width: 100%;
+            padding: 10px;
+        }
+
+        &-wrap{
+            display: flex;
+            justify-content: space-between;
+            gap: 10px;
+            @media (max-width: 1000px) {
+                display: flex;
+                flex-direction: column;
+                gap: 190px;
+            }
+        }
+
+        &-title{
+            color: #2C2C2C;
+            font-family: Tinos;
+            font-weight: 400;
+            font-size: 26px;
+            margin-top: 5px;
+            margin-bottom: 20px;
+            span{
+                color: #BC9060;
+            }
+            @media (max-width: 500px) {
+                font-size: 26px;
+            }
+        }
+
+        &-text{
+            color: $font_text-color;
+            font-family: Tinos;
+            font-weight: 400;
+            font-size: 26px;
+
+            @media (max-width: 500px) {
+                font-size: 22px;
+            }
+        }
+    }
+
+    &__bottom-back{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 130px;
+        @media (max-width: 863px) {
+            display: flex;
+            flex-direction: column;
+            gap: 50px;
+        }
+
+        &__text-part{
+            display: flex;
+            text-align: center;
+            flex-direction: column;
+            &__title{
+                font-size: 54px;
+                font-family: Tinos;
+                font-weight: 400;
+                margin-bottom: 21px;
+                span{
+                    color: #D67E34;
+                }
+                @media (max-width: 863px) {
+                    margin: auto;
+                    margin-bottom: 48px;
+                    font-size: 40px;
+                    width: 181px;
+                    height: 92px;
+                }
+            }
+            &__subtitle{
+                width: 444px;
+                height: 217px;
+                color: $font_text-color;
+                font-family: Open-Sans-regular;
+                font-weight: 400;
+                font-size: 16px;
+                margin-bottom: 39px;
+                @media (max-width: 863px) {
+                    font-size: 16px;
+                    width: 290px;
+                    height: 341px;
+                }
+            }
+        }
+
+        &__img-part{
+                width: 539px;
+                height: 498px;
+                margin-bottom: 122px;
+    
+            @media (max-width: 863px) {
+                width: 290px;
+                height: 257px;
+                margin-bottom: 51px;
+
+            }
+        }
+
+        &__food-counts{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            gap: 30px;
+            @media (max-width: 863px) {
+                flex-direction: column;
+            }
+        }
+        &__food-count{
+            display: flex;
+            flex-direction: column;
+            gap: 30px;
+            font-size: 20px;
+            span{
+                color: #BC9060;
+                font-size: 40px;
+            }
+            @media (max-width: 863px) {
+                gap: 2px;
+            }
+        }
+    }
+
+}
+
+.order{
+    background: url(../img/bg_order.svg) no-repeat center center / cover;
+    &__block{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 80px 40px;
+        &__text{
+            width: 601px;
+            height: 173px;
+            &__title{
+                font-family: Tinos;
+                font-weight: 400;
+                font-size: 52px;
+                width: 601px;
+                height: 120px;
+                color: #D67E34;
+                margin-bottom: 20px;
+            }
+            &__subtitle{
+                font-family: Open-Sans-bold;
+                font-weight: 700;
+                font-size: 24px;
+                color: #fff;
+                width: 542px;
+                height: 33px;
+            }
+        }
+        &__btn{
+            display: block;
+            width: 157px;
+            height: 47px;
+            text-transform: uppercase;
+            font-family: Open-Sans-bold;
+            font-weight: 700;
+            font-size: 14px;
+        }
+    }
+}
