--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -27,7 +27,6 @@ $font_title-color: #D67E34;
     padding: 0;
     box-sizing: border-box;
 
-    border: 1.5px solid gray;
 }
 
 a{
@@ -527,6 +526,7 @@ li{
 
 .cooks{
     padding: 0px 17px 0px 15.2px;
+    margin-bottom: 137px;
     &__title{
         display: flex;
         justify-content: center;
@@ -556,6 +556,7 @@ li{
     }
 
     &__img{
+        margin-bottom: 50px;
         &-wrap{
             display: flex;
             justify-content: space-between;
@@ -579,5 +580,27 @@ li{
             }
         }
     }
-    
+    &__dots{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        &__first-dot{
+            width: 7px;
+            height: 7px;
+            border: 1px solid #FFD4D4;
+            border-radius: 90px;
+        }
+        &__second-dot{
+            width: 5px;
+            height: 5px;
+            border: 1px solid #C4C4C4;
+            border-radius: 90px;
+            background-color: #C4C4C4;
+        }
+
+        @media (max-width: 1100px) {
+            display: none;
+        }
+    }
 }
