--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,6 +19,11 @@ $font_title-color: #D67E34;
     src: url(../fonts/Tinos-Regular.ttf);
     font-weight: 400;
 }
+@font-face {
+    font-family: 'Cookie';
+    src: url(../fonts/Cookie-Regular.ttf);
+    font-weight: 400;
+}
 
 /*###############################################*/
 
@@ -26,7 +31,6 @@ $font_title-color: #D67E34;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
 }
 
 a{
@@ -601,6 +605,201 @@ li{
 
         @media (max-width: 1100px) {
             display: none;
+        }
+    }
+}
+
+.menu{
+    background: url(../img/bg-menu.svg) no-repeat center center / cover;
+    padding: 100px 164px 435px 166px;
+    @media (max-width: 1215px) {
+        padding: 100px 164px 226px 166px;
+    }
+
+    @media (max-width: 500px) {
+        padding: 62px 15px 106px 15px;
+    }
+
+    &__title{
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 138px;
+        text-wrap: nowrap;
+        width: 270px;
+        color: #fff;
+        font-size: 54px;
+        font-family: Tinos;
+        font-weight: 400;
+        text-shadow: 5px 5px 4px rgba(0,0,0, 25%);
+    }
+
+    &__card{
+        width: 350px;
+        height: 539px;
+        gap: 30px;
+        background: #fff;
+        @media (max-width: 1215px) {
+            width: 290px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        &-wrap{
+            display: flex;
+            justify-content: space-between;
+        }
+        &__recommended{
+            position: absolute;
+            width: 124px;
+            height: 36px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: black;
+            font-size: 13px;
+            font-weight: 400;
+            font-family: Open-Sans-regular;
+            text-transform: uppercase;
+            background: $font_title-color;
+        }
+        &__img{
+            margin-bottom: 22px;
+            &__burger{
+                padding: 80px 62px 0px 63px;
+                position: relative;
+                z-index: 1;
+                @media (max-width: 1215px) {
+                    padding: 80px 26px 18px 39px;
+                }
+        
+            }
+            &__price::after{
+                content: '420';
+                height: 100px;
+                width: 100px;
+                background: $font_title-color;
+                border: 7px solid #fff;
+                border-radius: 90px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: #fff;
+                font-size: 30px;
+                font-weight: 400;
+                position: relative;
+                z-index: 2;
+                top: -310px;
+                margin: 205px 58px 0 192px;
+                font-family: Cookie;
+
+                @media (max-width: 1215px) {
+                    margin: 205px 21px 0 169px;
+                    content: '$42';
+                }
+            }
+        }
+        &__text{
+            position: relative;
+            top: -310px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            &__title{
+                font-size: 26px;
+                font-family: Tinos;
+                font-weight: 400;
+                margin-bottom: 17px;
+            }
+            &__subtitle{
+                text-align: center;
+                width: 190px;
+                font-size: 16px;
+                font-family: Open-Sans-regular;
+                font-weight: 400;
+                margin-bottom: 20px;
+            }
+        }
+        &__btn{
+            margin-left: auto;
+            margin-right: auto;
+            position: relative;
+            top: -310px;
+            width: 220px;
+            height: 50px;
+            text-transform: uppercase;
+            box-shadow: 5px 5px 20px 0px rgba(0,0,0, 25%);
+            text-align: center;
+            background: $font_title-color;
+        }
+    }
+    &__card2{
+        width: 350px;
+        height: 539px;
+        background: #fff;
+        @media (max-width: 1215px) {
+            display: none;
+        }
+        &__img{
+            margin-bottom: 22px;
+            &__burger{
+                padding: 80px 62px 0px 63px;
+                position: relative;
+                z-index: 1;
+                
+            }
+            &__price{
+                height: 100px;
+                width: 100px;
+                background: $font_title-color;
+                border: 7px solid #fff;
+                border-radius: 90px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: #fff;
+                font-size: 30px;
+                font-weight: 400;
+                position: relative;
+                z-index: 2;
+                top: -310px;
+                margin: 205px 58px 0 192px;
+                font-family: Cookie;
+            }
+        }
+        &__text{
+            position: relative;
+            top: -310px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            &__title{
+                font-size: 26px;
+                font-family: Tinos;
+                font-weight: 400;
+                margin-bottom: 17px;
+            }
+            &__subtitle{
+                text-align: center;
+                width: 190px;
+                font-size: 16px;
+                font-family: Open-Sans-regular;
+                font-weight: 400;
+                margin-bottom: 20px;
+            }
+        }
+        &__btn{
+            margin-left: auto;
+            margin-right: auto;
+            position: relative;
+            top: -310px;
+            width: 220px;
+            height: 50px;
+            text-transform: uppercase;
+            box-shadow: 5px 5px 20px 0px rgba(0,0,0, 25%);
+            text-align: center;
+            background: $font_title-color;
         }
     }
 }
