--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -292,20 +292,23 @@ li{
         margin-top: -315px;
         margin-bottom: 150px;
         @media (max-width: 1000px) {
-            width: 50%;
             display: flex;
             padding: 10px;
             align-items: center;
             justify-content: center;
             margin: auto;
+            margin-top: -315px;
+            margin-bottom: 275px;
+
         }
         @media (max-width: 863px) {
-            width: 75%;
             display: flex;
             padding: 10px;
             align-items: center;
             justify-content: center;
             margin: auto;
+            margin-top: -315px;
+            margin-bottom: 265px;
         }
 
         &-wrap{
